# nsip

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .mcp.json  .mcpbignore  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFLICT_RESOLUTION_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  OPTIMIZATION_CHANGES.txt  PHASE2_COMMIT_MESSAGE.txt  PHASE2_FILES_CHANGED.md  PHASE2_STATUS.txt  README.md  SECURITY.md  SUPPORT.md  WORKFLOW_ANALYSIS.md  WORKFLOW_OPTIMIZATION_COMPLETE.md  WORKFLOW_OPTIMIZATION_SUMMARY.md  WORKFLOW_PHASE2_COMPLETE.md  WORKFLOW_PHASE2_SUMMARY.md  WORKFLOW_QUICK_REFERENCE.md  WORKFLOW_README.md  build.rs  cliff.toml  clippy.toml  codecov.yml  deny.toml  justfile  manifest.json  osv-scanner.toml  rustfmt.toml
.claude/: refactor.config.json
.claude/agents/: rust-developer.md  test-engineer.md
.claude/commands/: mcp-validate.md
.claude/skills/release/: SKILL.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  actionlint.yaml  copilot-instructions.md  dependabot.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: config.yml  flock-action.yml
.github/actions/: README.md
.github/actions/install-cargo-tool/: action.yml
.github/actions/setup-rust-cached/: action.yml
.github/aw/: actions-lock.json
.github/instructions/: nsip-mcp.instructions.md  rust-code.instructions.md  tests.instructions.md
.github/prompts/: add-error-variant.prompt.md  fix-clippy.prompt.md  new-module.prompt.md  write-tests.prompt.md
.github/workflows/: adr-validation.yml  adr-viewer.yml  agentics-maintenance.yml  back-merge.yml  benchmark-regression.yml  benchmark.yml  changelog.yml  ci-doctor.lock.yml  ci-doctor.md  ci.yml  ci.yml.new  code-quality.yml  codeql-analysis.yml  container-scan.yml  contributors.yml  copilot-setup-steps.yml  coverage.yml  daily-docs-review.lock.yml  daily-docs-review.md  daily-qa.lock.yml  daily-qa.md  daily-repo-status.lock.yml  daily-test-improver.lock.yml  daily-test-improver.md  dependabot-automerge.yml  docker-hub.yml  docker.yml  docs-deploy.yml  flock-action.lock.yml  flock-action.md  fuzz-testing.yml  issue-triage.lock.yml  mutation-testing.yml  nightly.yml  package-homebrew.yml  package-linux.yml  package-snap.yml  package-windows.yml  publish.yml  q.lock.yml  (+15 more)
certs/: mcpb-signing.pem
crates/: client.rs  format.rs  lib.rs  main.rs  mcp.rs  models.rs  problem.rs  render.rs
crates/mcp/: analytics.rs  elicitation.rs  instructions.rs  mod.rs  prompts.rs  resources.rs  telemetry.rs  tool_sets.rs  tools.rs  transport.rs
crates/mcp/oauth/: authorize.rs  callback.rs  config.rs  discovery.rs  error.rs  github.rs  jwt.rs  middleware.rs  mod.rs  registration.rs  store.rs  token.rs  token_tests.rs
docs/: DEPLOYMENT.md  MCP.md  README.md
docs/adr/: 0001-use-architectural-decision-records.md  0002-documentation-directory-structure.md  0003-adopt-diataxis-documentation-framework.md  0004-dual-consumer-error-envelope.md  0005-error-type-uri-policy.md  README.md
docs/distribution/: ALTERNATIVE-REGISTRIES.md  DOCKER-REGISTRIES.md  PACKAGE-MANAGERS.md
docs/explanation/: BREED-GROUPS-AND-TRAITS.md  DATA-TO-DECISIONS.md  DYNAMIC-INSTRUCTIONS.md  EBV-EXPLAINED.md  GENETIC-EVALUATION.md  MCP-SECURITY.md  NSIP-DATA-MODEL.md  TELEMETRY.md
docs/how-to/: BATCH-QUERY.md  COMPARE-ANIMALS.md  CONFIGURE-CLIENT.md  EXPORT-JSON.md  FILTER-SEARCH-RESULTS.md  FLOCK-ACTION.md  MATING-RECOMMENDATIONS.md  MCP-TOOL-SETS.md  OAUTH-AUTHENTICATION.md  SCRIPTING-INTEGRATION.md  TELEMETRY.md  USE-MCP-TOOLS.md
docs/llm-guides/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  copilot-instructions.md  cursorrules
docs/observability/: METRICS-DASHBOARD.md
docs/reference/: CLI.md  CONFIGURATION.md  ERROR-ENVELOPE.md  ERROR-HANDLING.md  LIBRARY-API.md  MCP-SERVER-CONFIGURATION.md  MCP-TOOLS.md
docs/reference/errors/: README.md
docs/reference/errors/api/: connection.md  error.md  not-found.md  timeout.md  upstream-parse.md
docs/reference/errors/cli/: compare-arity.md  empty-lpn-id.md  empty-search.md  invalid-breed-id.md  page-range.md  unknown-transport.md  validation.md
docs/reference/errors/mcp/: invalid-cursor.md  missing-argument.md  unknown-resource.md
docs/runbooks/: CI-TROUBLESHOOTING.md  DEPENDENCY-UPDATES.md  RELEASING.md  SECURITY-RESPONSE.md
docs/security/: SIGNED-RELEASES.md
docs/template/: CI-WORKFLOWS.md  CONFIGURATION.md  COPILOT-JUMPSTART.md  CUSTOMIZATION.md  GETTING-STARTED.md  GITHUB-TEMPLATE-FEATURES.md
docs/testing/: PROPERTY-BASED-TESTING.md
docs/tutorials/: FIRST-API-QUERY.md  GETTING-STARTED.md  INTERPRETING-RESULTS.md  MCP-SERVER-SETUP.md
docs/ux/: MAN-PAGES.md  SHELL-COMPLETIONS.md
docs/workflows/: ADR-WORKFLOWS.md  AGENTIC-WORKFLOWS.md  BENCHMARK-REGRESSION.md  BENCHMARK.md  CHANGELOG.md  CI.md  CODE-QUALITY.md  CONTAINER-SCAN.md  CONTRIBUTORS.md  COPILOT-SETUP-STEPS.md  COVERAGE.md  DEPENDABOT-AUTOMERGE.md  DOCKER-HUB.md  DOCKER.md  DOCS-DEPLOY.md  FLOCK-ACTION.md  FUZZ-TESTING.md  MUTATION-TESTING.md  NIGHTLY.md  PACKAGE-HOMEBREW.md  PACKAGE-LINUX.md  PACKAGE-SNAP.md  PACKAGE-WINDOWS.md  PUBLISH.md  RELEASE.md  SBOM.md  SECRETS-SCAN.md  SECURITY-AUDIT.md  SIGNED-RELEASES.md  SLSA-PROVENANCE.md  SPELL-CHECK.md  STALE.md  TEMPLATE-INIT.md  TEST-MATRIX.md
examples/: batch_query_concurrent.rs  configure_client.rs  getting_started_error_handling.rs
scripts/: validate-workflow-optimization.sh
snap/: snapcraft.yaml
tests/: cli_test.rs  integration_test.rs
