[package]
name = "nsip"
version = "0.4.0"
edition = "2024"
rust-version = "1.92"
description = "NSIP Search API client for nsipsearch.nsip.org/api"
license = "MIT"
authors = ["Robert Allen <zircote@gmail.com>"]
repository = "https://github.com/zircote/nsip"
homepage = "https://github.com/zircote/nsip"
documentation = "https://docs.rs/nsip"
readme = "README.md"
keywords = ["nsip", "livestock", "api", "search"]
categories = ["api-bindings"]

[lib]
name = "nsip"
path = "crates/lib.rs"

[[bin]]
name = "nsip"
path = "crates/main.rs"

[dependencies]
# Core dependencies
thiserror = "2.0.18"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Regex (for parsing HTML in lineage responses)
regex = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"

# MCP server
rmcp = { version = "1.5", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "elicitation",
    "schemars",
] }

# HTTP transport for MCP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# OAuth 2.1
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
subtle = "2"
base64 = "0.22"
rand = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (optional, behind `telemetry` feature)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
# Testing
proptest = "1.11.0"
test-case = "3.3.1"

# Async / HTTP mocking
tokio-test = "0.4"
wiremock = "0.6"

# CLI integration tests
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27.0"

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Enable additional warnings
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Deny all warnings in CI
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-module)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

# Allow multiple crate versions (can't control transitive deps)
multiple_crate_versions = "allow"

# Suggests Duration::from_mins (stable in 1.95) but our MSRV is 1.92
duration_suboptimal_units = "allow"

[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
